--- a/cricketlive/templates/about1.html
+++ b/cricketlive/templates/about1.html
@@ -53,7 +53,7 @@
                   <div class="container">
                     <div class="comon-fild-ads1 d-md-flex align-items-center">
                       <figure>
-                          <img src="{% static 'cricketlive/images/pexels-photo-2973104.jpeg' %}" alt="bg"/>
+                          <img src="{% static 'cricketlive/images/pakkteam.jpg' %}" alt="bg"/>
                       </figure>
 
                       <div class="left-history mt-3 mt-md-0">
@@ -67,7 +67,7 @@
                   <div class="container">
                     <div class="comon-fild-ads1 d-md-flex align-items-center">
                       <figure>
-                          <img src="{% static 'cricketlive/images/pexels-photo-12806375.webp' %}" alt="bg"/>
+                          <img src="{% static 'cricketlive/images/bangteam.jpg' %}" alt="bg"/>
                       </figure>
 
                       <div class="left-history mt-3 mt-md-0">
