--- a/cricketlive/templates/matches1.html
+++ b/cricketlive/templates/matches1.html
@@ -88,7 +88,7 @@
                           <br><br>
                           {% endfor %}
                       {% else %}
-                        <a href="match-details.html" class="comon-teams-01 d-inline-block w-100">
+                        <a href="" class="comon-teams-01 d-inline-block w-100">
                           <div class="top-part-section d-inline-block w-100">
                               <h1 style="color: white">No live Matches now</h1>
                           </div>
