--- a/cricketlive/templates/index1.html
+++ b/cricketlive/templates/index1.html
@@ -34,11 +34,10 @@
                         <div class="col-lg-7">
                           <div class="header-content">
                             <h1 class="fadeInDown animated">
-                              Post Match Shenanigans ft. Shubman Gill | India vs Bangladesh
+                              6S Cricket indefinite Cricket <br> Make Wonderful memories here
                             </h1>
 
-                            <p class="mt-3"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                              Lorem Ipsum has been the industry's standard dummy
+                            <p class="mt-3"> Welcome to <b>6s Cricket</b>, your ultimate destination for all things cricket! We're here to make your cricket experience exciting and accessible.
                             </p>
 
                             <a href="{% url 'live' %}" class="btn btn-comon-btn">
@@ -62,11 +61,10 @@
                         <div class="col-lg-7">
                           <div class="header-content">
                             <h1 class="fadeInDown animated">
-                              Post Match Shenanigans ft. Shubman Gill | India vs Bangladesh
+                              6S Cricket indefinite Cricket <br> Make Wonderful memories here
                             </h1>
 
-                            <p class="mt-3"> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                              Lorem Ipsum has been the industry's standard dummy
+                            <p class="mt-3"> Welcome to <b>6s Cricket</b>, your ultimate destination for all things cricket! We're here to make your cricket experience exciting and accessible.
                             </p>
 
                             <a href="{% url 'live' %}" class="btn btn-comon-btn">
@@ -785,7 +783,7 @@
           <div class="row mt-4">
               <div class="col-lg-8">
                   <div class="big-viuy d-inline-block w-100">
-                    <video id="videoplaylist" poster="{{highlights.1.thumbnail}}" controls="">
+                    <video id="videoplaylist" poster="{{highlights.1.thumbnail}}" controls="" muted>
                         <source src="{{highlights.1.video_url}}" type="video/mp4">
                     </video>
                   </div>
@@ -1338,12 +1336,5 @@ function run(song, videoplaylist, link){
         videoplaylist.load();
         videoplaylist.play();
 }
-</script>
-
-<script>
-// Reload the page after 30 seconds
-setTimeout(function() {
-    window.location.reload(true);
-}, 30000); // 30 seconds = 30000 milliseconds
 </script>
 {% endblock js %}
